# possu-api

./: .env.template  .gitignore  Cargo.toml  README.md  api-documentation.yaml  possu_database.sqlite  sqlx-data.json
.github/workflows/: test.yaml
migrations/: 20230526103604_categories.up.sql  20230526103609_entries.up.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/database/: fixtures  functions.rs  mod.rs  setup.rs
src/response/: mod.rs
tests/: client.rs  delete_entry_with_id.rs  expense.rs  get_entry.rs  get_entry_with_id.rs  get_healthcheck.rs  healthcheck.rs  non_existing_uri.rs  post_entry.rs  response.rs
tests/common/: client.rs  database.rs  mod.rs  response.rs
tests/fixtures/: entries.sql
