[package]
name = "possu-api"
version = "0.1.0"
edition = "2021"
authors = ["Lílian Ferreira de Freitas <lily.mosquitoes@gmail.com>"]
license = "AGPL-3.0-or-later"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
log = "0.4"
fern = "0.6"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "offline"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_sqlite"]
